--- a/src/components/Note.css
+++ b/src/components/Note.css
@@ -1,7 +1,9 @@
 .note {
+  width: 160px;
+  height: 180px;
+  float: left;
   margin: 10px;
-  padding: 5px;
-  width: 100%;
+  border: 1px solid rgba(0,0,0,.25);
   background-color: #f2efda;
 }
 
@@ -11,4 +13,14 @@
 
 .note-content {
   font-size: 16px;
+}
+
+.pin-red {
+  height: 15px;
+  width: 15px;
+  background-color: red;
+  border: solid 1px darkred;
+  border-radius: 50%;
+  display: inline-block;
+  box-shadow: 0px 5px 5px 0px grey;
 }
