--- a/src/components/Note.css
+++ b/src/components/Note.css
@@ -15,11 +15,11 @@
   font-size: 16px;
 }
 
-.pin-red {
+.pin-purple {
   height: 15px;
   width: 15px;
-  background-color: red;
-  border: solid 1px darkred;
+  background-color: #7d2ae8;
+  border: solid 1px #401577;
   border-radius: 50%;
   display: inline-block;
   box-shadow: 0px 5px 5px 0px grey;
